--- a/music_controller/frontend/package.json
+++ b/music_controller/frontend/package.json
@@ -15,8 +15,8 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   },
@@ -24,6 +24,8 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "react-router-dom": "^6.26.0"
