--- a/music_controller/frontend/package.json
+++ b/music_controller/frontend/package.json
@@ -26,6 +26,7 @@
     "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "react-router-dom": "^6.26.0"
